fixup! [Curated-Apps] Add OpenVINO Model Server
Signed-off-by: Sonali Saha <sonali.saha@intel.com>

--- a/Intel-Confidential-Compute-for-X/workloads/openvino-model-server/openvino-model-server.manifest.template
+++ b/Intel-Confidential-Compute-for-X/workloads/openvino-model-server/openvino-model-server.manifest.template
@@ -1,10 +1,10 @@
 # SPDX-License-Identifier: LGPL-3.0-or-later
 # Copyright (C) 2023 Intel Corporation
 
-# This file has basic set of values defined for graminizing mysql images. This manifest template
-# is used by `curation_script.sh` to create the user manifest file that will be passed to GSC.
+# This file has basic set of values defined for graminizing OpenVINO Model Server images. This
+# manifest template is used by `curation_script.sh` to create the user manifest file that will be
+# passed to GSC.
 
-sgx.nonpie_binary = true
 sgx.enclave_size = "16G"
 sgx.max_threads = 512
 
@@ -18,4 +18,6 @@ fs.mounts = [
   { type = "tmpfs", path = "/tmp" },
 ]
 
+# FIXME: `LD_PRELOAD` should be replaced with `loader.env.LD_LIBRARY_PATH = "/ovms/lib"` when GSC
+# has the concat logic for `loader.env.LD_LIBRARY_PATH`.
 loader.env.LD_PRELOAD = "/ovms/lib/libazurestorage.so:/ovms/lib/libcpprest.so:/ovms/lib/libopenvino.so:/ovms/lib/libopencv_core.so:/ovms/lib/libopencv_imgcodecs.so:/ovms/lib/libopencv_imgproc.so:/ovms/lib/libopencv_calib3d.so:/ovms/lib/libopencv_features2d.so:/ovms/lib/libopencv_highgui.so:/ovms/lib/libopencv_optflow.so:/ovms/lib/libopencv_video.so:/ovms/lib/libopencv_videoio.so"
