--- a/Intel-Confidential-Compute-for-X/workloads/openvino-model-server/openvino-model-server-gsc.dockerfile.template
+++ b/Intel-Confidential-Compute-for-X/workloads/openvino-model-server/openvino-model-server-gsc.dockerfile.template
@@ -2,8 +2,8 @@
 # Copyright (C) 2023 Intel Corporation
 
 # This template is used by `curation_script.sh` to create a wrapper dockerfile
-# `mysql-gsc.dockerfile` that includes user provided inputs e.g. `ca.cert` file etc.
-# into the graminized MySQL image.
+# `openvino-model-server-gsc.dockerfile` that includes user provided inputs e.g. `ca.cert` file
+# etc. into the graminized OpenVINO Model Server image.
 
 # The curation script fills the <base_image_name> during curation.
 FROM <base_image_name>
