--- a/Examples/aks-attestation/aks-secret-prov-server-deployment.yaml
+++ b/Examples/aks-attestation/aks-secret-prov-server-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: ra-tls-secret-prov-server-container
-        image: aks01containerregistry.azurecr.io/aks-secret-prov-server-img:latest
+        image: aks01containerregistry.azurecr.io/secret-prov-server:latest
         ports:
         - containerPort: 4433
         resources:
