--- a/Examples/aks-attestation/aks-secret-prov-client-deployment.yaml
+++ b/Examples/aks-attestation/aks-secret-prov-client-deployment.yaml
@@ -16,10 +16,10 @@ spec:
           path: /var/run/aesmd
       containers:
       - name: gsc-ra-tls-secret-prov-client-container
-        image: <dockerhubusername>/gsc-aks-secret-prov-client-img:latest
+        image: aks01containerregistry.azurecr.io/secret-prov-client:latest
         env:
         - name: SECRET_PROVISION_SERVERS
-          value: "ra-tls-server-aks-dns.eastus.cloudapp.azure.com:4433"
+          value: "ra-tls-server-aks-dns.eastus2.cloudapp.azure.com:4433"
         resources:
           limits:
             sgx.intel.com/epc: "10Mi"
