[Curated-Apps] Move to Gramine v1.6.1
Signed-off-by: jkr0103 <jitender.kumar@intel.com>

--- a/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
+++ b/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
@@ -7,7 +7,21 @@ RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
     && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
     build-essential \
     git \
-    pkg-config
+    pkg-config \
+    wget \
+    binutils \
+    libprotobuf-c-dev \
+    locales \
+    openssl \
+    python3 \
+    python3-cryptography \
+    python3-protobuf \
+    python3-pyelftools \
+    python3-pip \
+    python3-click \
+    python3-jinja2 \
+    python3-tomli \
+    python3-tomli-w
 
 COPY keys/* /usr/share/keyrings/
 
@@ -20,12 +34,18 @@ RUN echo 'deb [arch=amd64 signed-by=/usr/share/keyrings/gramine-keyring.gpg] htt
 RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
     && env DEBIAN_FRONTEND=noninteractive apt-get install -y \
     libsgx-dcap-default-qpl=1.16.100.2-jammy1 \
-    gramine=1.6
+    libsgx-dcap-quote-verify-dev
+
+RUN wget https://github.com/gramineproject/gramine/releases/download/v1.6.1/gramine_1.6.1_amd64.deb \
+    && dpkg -i gramine_1.6.1_amd64.deb
+
+RUN wget https://github.com/gramineproject/gramine/releases/download/v1.6.1/gramine-ratls-dcap_1.6.1_amd64.deb \
+    && dpkg -i gramine-ratls-dcap_1.6.1_amd64.deb
 
 RUN sed -i "s|^\(  \"pccs_url\": \"https://\).*\(/sgx/certification.*\)|\1api.trustedservices.intel.com\2|g" \
     /etc/sgx_default_qcnl.conf
 
-RUN git clone --depth 1 --branch v1.6 https://github.com/gramineproject/gramine.git
+RUN git clone --depth 1 --branch v1.6.1 https://github.com/gramineproject/gramine.git
 
 ARG server_dcap_type="secret_prov_minimal"
 RUN if [ $server_dcap_type="secret_prov_pf" ]; then \
