--- a/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
+++ b/Intel-Confidential-Compute-for-X/verifier/verifier.dockerfile.template
@@ -25,7 +25,8 @@ RUN env DEBIAN_FRONTEND=noninteractive apt-get update \
 RUN sed -i "s|^\(  \"pccs_url\": \"https://\).*\(/sgx/certification.*\)|\1api.trustedservices.intel.com\2|g" \
     /etc/sgx_default_qcnl.conf
 
-RUN git clone --depth 1 --branch v1.6.1 https://github.com/gramineproject/gramine.git
+RUN git clone https://github.com/gramineproject/gramine.git \
+    && cd gramine && git checkout $(git tag --list 'v*.*' --sort=taggerdate | tail -1)
 
 ARG server_dcap_type="secret_prov_minimal"
 RUN if [ $server_dcap_type="secret_prov_pf" ]; then \
